--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>@ViewData["Title"] - Arnis.Web</title>
+        <title>@ViewData["Title"] - Arnis</title>
 
         <environment names="Development">
             <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,13 +26,16 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a asp-controller="Home" asp-action="Index" class="navbar-brand">Arnis.Web</a>
+                    <a asp-controller="Home" asp-action="Index" class="navbar-brand">Arnis</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a asp-controller="Home" asp-action="Index">Home</a></li>
-                        <li><a asp-controller="Home" asp-action="About">About</a></li>
-                        <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
+                        <li><a asp-controller="Home" asp-action="GetStarted">Getting started</a></li>
+                        <li><a asp-controller="Home" asp-action="Workspaces">Workspaces</a></li>
+                        <li><a asp-controller="Home" asp-action="Monitoring">Monitoring</a></li>
+                        <li><a href="https://github.com/rdagumampan/arnis" target="_blank">GitHub</a></li>
+                        <li><a href="https://github.com/rdagumampan/arnis/issues" target="_blank">Issues</a></li>
                     </ul>
                 </div>
             </div>
@@ -41,7 +44,7 @@
             @RenderBody()
             <hr />
             <footer>
-                <p>&copy; 2016 - Arnis.Web</p>
+                <p>&copy; 2016 - Arnis - Simple dependency tracker for .NET applications</p>
             </footer>
         </div>
 
