Uses the nuget package for Arnis Azure DocumentDB documents. Wired up urls / routes

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,10 +30,10 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a asp-controller="Home" asp-action="Index">Home</a></li>
-                        <li><a asp-controller="Home" asp-action="GetStarted">Getting started</a></li>
-                        <li><a asp-controller="Home" asp-action="Workspaces">Workspaces</a></li>
-                        <li><a asp-controller="Home" asp-action="Monitoring">Monitoring</a></li>
+                        <li><a href="home">Home</a></li>
+                        <li><a href="gettingstarted">Getting started</a></li>
+                        <li><a href="workspaces">Workspaces</a></li>
+                        <li><a href="statistics">Statistics</a></li>
                         <li><a href="https://github.com/rdagumampan/arnis" target="_blank">GitHub</a></li>
                         <li><a href="https://github.com/rdagumampan/arnis/issues" target="_blank">Issues</a></li>
                     </ul>
