All links fixed. Place holder content pages created.

--- a/Views/Home/GettingStarted.cshtml
+++ b/Views/Home/GettingStarted.cshtml
@@ -4,4 +4,4 @@
 <h2>@ViewData["Title"].</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Hold on, I'll get back on this. Meanwhile, you may visit the GitHub pages instead.</p>
