--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="home">Home</a></li>
+                        <li><a href="/">Home</a></li>
                         <li><a href="gettingstarted">Getting started</a></li>
                         <li><a href="workspaces">Workspaces</a></li>
                         <li><a href="statistics">Statistics</a></li>
